@@ -1,3 +1,14 @@
+2021-06-10  Chris Dumez  <cdumez@apple.com>
+
+        Unreviewed macOS build fix.
+
+        Add some missing header includes.
+
+        * Shared/mac/MediaFormatReader/CoreMediaWrapped.h:
+        * Shared/mac/MediaFormatReader/MediaSampleByteRange.h:
+        * Shared/mac/MediaFormatReader/MediaSampleCursor.h:
+        * Shared/mac/MediaFormatReader/MediaTrackReader.cpp:
+
 2021-06-10  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         [WinCairo] Can't open WebInspector UI since r277787
